[package]
name = "rs-es"
version = "0.11.0"
authors = ["Ben Ashford"]
license = "Apache-2.0"
repository = "https://github.com/benashford/rs-es"
description = "Client for the ElasticSearch REST API"
readme = "README.md"
keywords = ["elasticsearch", "elastic"]
exclude = ["docker-dev.yml"]
edition = "2018"

[lib]
name = "rs_es"

[dependencies]
reqwest = "0.9"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
env_logger = "*"
regex = "*"
