[package]
name = "rs-es"
version = "0.12.3"
authors = ["Ben Ashford"]
license = "Apache-2.0"
repository = "https://github.com/benashford/rs-es"
description = "Client for the ElasticSearch REST API"
readme = "README.md"
keywords = ["elasticsearch", "elastic"]
exclude = [".gitignore", ".travis.yml", "docker-compose.yml"]
edition = "2018"

[features]
default = ["tls"]
es5 = []
geo = ["geojson"]
tls = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]

[lib]
name = "rs_es"

[dependencies]
reqwest = {version = "0.9", default-features=false}
log = "0.4"
serde_json = "1.0"
serde = {version = "1", features = ["derive"]}
geojson = { version="0.16", optional=true}

[dev-dependencies]
env_logger = "0.6"
regex = "1.2"
doc-comment = "0.3"
